--- a/project/package.json
+++ b/project/package.json
@@ -9,8 +9,10 @@
   "author": "Harry Ingles",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "mongoose": "^4.13.7",
     "socket.io": "^2.0.4"
   }
 }
