--- a/project/package.json
+++ b/project/package.json
@@ -9,10 +9,15 @@
   "author": "Harry Ingles",
   "license": "ISC",
   "dependencies": {
+    "browser-cookies": "^1.2.0",
+    "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "js-cookie": "^2.2.0",
     "mongoose": "^4.13.7",
+    "multer": "^1.3.0",
     "socket.io": "^2.0.4"
   }
 }
