--- a/project/package.json
+++ b/project/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^2.2.0",
     "mongoose": "^4.13.7",
     "multer": "^1.3.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-proxy": "^1.0.3"
   }
 }
